--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Tests
 
 on: [push, pull_request]
 
@@ -12,5 +12,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
+      - name: Install dependencies
       - run: yarn install
+      - name: Run unit tests
       - run: yarn test
