--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
+
       - name: Install dependencies
-      - run: yarn install
+        run: yarn install
+
       - name: Run unit tests
-      - run: yarn test
+        run: yarn test
