--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "helmet": "^7.1.0",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "typescript": "*"
   },
   "devDependencies": {
@@ -31,6 +33,8 @@
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
     "@types/supertest": "^2.0.16",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "babel-cli": "^6.26.0",
