--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/express-session": "^1.17.10",
     "@types/node": "^20.9.0",
     "@xata.io/client": "^0.28.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
